<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgournd_color"
    android:padding="12dp"
    tools:context="com.example.inventoryapp.DetailsActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:text="@string/prod_name"
            android:textSize="16sp"
            android:textStyle="bold" />
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="25"
            android:textSize="14sp"
            android:hint="@string/prod_name_hint"
            android:id="@+id/edit_name_text"
            android:textStyle="italic"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.10"
            android:maxLength="25"
            android:textSize="14sp"
            android:text="0"
            android:id="@+id/edit_quantity_text"
            android:textStyle="italic"/>

        <Button
            android:layout_width="@dimen/plus_minus_button_width"
            android:layout_height="@dimen/plus_minus_button_heigh"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/button_one_pluss"
            android:id="@+id/plus_one_button"/>

        <Button
            android:layout_width="@dimen/plus_minus_button_width"
            android:layout_height="@dimen/plus_minus_button_heigh"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/button_one_minus"
            android:id="@+id/minus_one_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prod_price"
            android:hint="@string/prod_price_hint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLength="6"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:hint="@string/prod_price_hint"
            android:id="@+id/edit_price_text"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/prod_pic"
            android:scaleType="centerCrop"
            android:id="@+id/product_image"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/button_select_prodimage"
            android:id="@+id/select_pic_button"
            android:textAllCaps="true" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_from_provider_button"
        android:visibility="gone"
        android:text="@string/order_from_provider"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textAllCaps="true"/>

</LinearLayout>